--- a/Launcher.exe.config
+++ b/Launcher.exe.config
@@ -15,7 +15,7 @@
     <add key="urlNoticia" value="https://www.facebook.com/Poke-Black-106339357630956/"/>
 
     <!--Configurações de Sprites Maiores que 100Mb-->
-    <add key="DirSprite" value="data/things/854"/><!--Vazio se as sprites ficarem na raiz do cliente.-->
+    <add key="DirSprite" value="data/things/854/"/><!--Vazio se as sprites ficarem na raiz do cliente.-->
 
     <!--Configurações de Personalização - Imagens-->
     <add key="Background" value="background.jpg"/>
